cmake_minimum_required(VERSION 3.28)
project(Cpp_Primer_Plus)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(Chapter_03)
add_subdirectory(Chapter_04)
add_subdirectory(Chapter_05)
add_subdirectory(Chapter_06)
add_subdirectory(Chapter_07)
add_subdirectory(Chapter_08)
add_subdirectory(Chapter_09)
add_subdirectory(Chapter_10)
add_subdirectory(Chapter_11)
add_subdirectory(Chapter_12)
add_subdirectory(Chapter_13)
