add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(test01 test01.cpp)
add_executable(test02 test02.cpp)
add_executable(test03 test03.cpp)
add_executable(test04 test04.cpp)
add_executable(test05 test05.cpp)
add_executable(test06 test06.cpp)
