add_executable(01_Chapter04 01.cpp)
add_executable(02_Chapter04 02.cpp)
add_executable(03_Chapter04 03.cpp)
add_executable(04_Chapter04 04.cpp)
add_executable(05_Chapter04 05.cpp)
add_executable(06_Chapter04 06.cpp)
add_executable(07_Chapter04 07.cpp)
add_executable(08_Chapter04 08.cpp)
add_executable(09_Chapter04 09.cpp)
add_executable(10_Chapter04 10.cpp)
add_executable(11_Chapter04 11.cpp)
add_executable(12_Chapter04 12.cpp)
add_executable(13_Chapter04 13.cpp)
add_executable(14_Chapter04 14.cpp)
add_executable(15_Chapter04 15.cpp)
add_executable(16_Chapter04 16.cpp)
add_executable(17_Chapter04 17.cpp)
add_executable(18_Chapter04 18.cpp)
add_executable(19_Chapter04 19.cpp)
add_executable(20_Chapter04 20.cpp)
add_executable(review_Chapter04 review.cpp)
add_executable(test01_Chapter04 test01.cpp)
add_executable(test02_Chapter04 test02.cpp)
add_executable(test03_Chapter04 test03.cpp)
add_executable(test04_Chapter04 test04.cpp)
add_executable(test05_Chapter04 test05.cpp)
add_executable(test06_Chapter04 test06.cpp)
add_executable(test07_Chapter04 test07.cpp)
add_executable(test08_Chapter04 test08.cpp)
add_executable(test09_Chapter04 test09.cpp)
add_executable(test10_Chapter04 test10.cpp)
