add_executable(01_Chapter05 01.cpp)
add_executable(02_Chapter05 02.cpp)
add_executable(03_Chapter05 03.cpp)
add_executable(04_Chapter05 04.cpp)
add_executable(05_Chapter05 05.cpp)
add_executable(06_Chapter05 06.cpp)
add_executable(07_Chapter05 07.cpp)
add_executable(08_Chapter05 08.cpp)
add_executable(09_Chapter05 09.cpp)
add_executable(10_Chapter05 10.cpp)
add_executable(11_Chapter05 11.cpp)
add_executable(12_Chapter05 12.cpp)
add_executable(13_Chapter05 13.cpp)
add_executable(14_Chapter05 14.cpp)
add_executable(review_05 review_05.cpp)
add_executable(test01_Chapter05 test01.cpp)
add_executable(test02_Chapter05 test02.cpp)
add_executable(test03_Chapter05 test03.cpp)
add_executable(test04_Chapter05 test04.cpp)
add_executable(test05_Chapter05 test05.cpp)
add_executable(test06_Chapter05 test06.cpp)
add_executable(test07_Chapter05 test07.cpp)
add_executable(test08_Chapter05 test08.cpp)
add_executable(test09_Chapter05 test09.cpp)
add_executable(test10_Chapter05 test10.cpp)
