add_executable(01_Chapter06 01.cpp)
add_executable(02_Chapter06 02.cpp)
add_executable(03_Chapter06 03.cpp)
add_executable(04_Chapter06 04.cpp)
add_executable(05_Chapter06 05.cpp)
add_executable(06_Chapter06 06.cpp)
add_executable(07_Chapter06 07.cpp)
add_executable(08_Chapter06 08.cpp)
add_executable(09_Chapter06 09.cpp)
add_executable(10_Chapter06 10.cpp)
add_executable(11_Chapter06 11.cpp)
add_executable(review_Chapter06 review_06.cpp)
add_executable(test01_Chapter06 test01.cpp)
add_executable(test02_Chapter06 test02.cpp)
add_executable(test03_Chapter06 test03.cpp)
add_executable(test04_Chapter06 test04.cpp)
add_executable(test05_Chapter06 test05.cpp)
add_executable(test06_Chapter06 test06.cpp)
add_executable(test07_Chapter06 test07.cpp)
add_executable(test08_Chapter06 test08.cpp)
add_executable(test09_Chapter06 test09.cpp)
