add_executable(01_Chapter08 01.cpp)
add_executable(02_Chapter08 02.cpp)
add_executable(03_Chapter08 03.cpp)
add_executable(04_Chapter08 04.cpp)
add_executable(05_Chapter08 05.cpp)
add_executable(05_1_Chapter08 05_1.cpp)
add_executable(06_Chapter08 06.cpp)
add_executable(07_Chapter08 07.cpp)
add_executable(08_Chapter08 08.cpp)
add_executable(09_Chapter08 09.cpp)
add_executable(10_Chapter08 10.cpp)
add_executable(Extra_Chapter08 Extra.cpp)
add_executable(11_Chapter08 11.cpp)
add_executable(12_Chapter08 12.cpp)
add_executable(13_Chapter08 13.cpp)
add_executable(13_01_Chapter08 13_01.cpp)
add_executable(14_Chapter08 14.cpp)
add_executable(15_Chapter08 15.cpp)
add_executable(review_Chapter08 review.cpp)
add_executable(test01_Chapter08 test01.cpp)
add_executable(test02_Chapter08 test02.cpp)
add_executable(test03_Chapter08 test03.cpp)
add_executable(test04_Chapter08 test04.cpp)
add_executable(test05_Chapter08 test05.cpp)
add_executable(test06_Chapter08 test06.cpp)
add_executable(test07_Chapter08 test07.cpp)
