add_executable(01_Chapter10 01_main_Chapter10.cpp 01_file_Chapter10.cpp)
add_executable(02_Chapter10 02_main_Chapter10.cpp 02_file_Chapter10.cpp)
add_executable(03_Chapter10 03_main_Chapter10.cpp 03_file_Chapter10.cpp)
add_executable(04_Chapter10 04_main_Chapter10.cpp 04_file_Chapter10.cpp)
add_executable(review_Chapter10 review_Chapter10.cpp)
add_executable(test01_Chapter10 test01_main_Chapter10.cpp test01_file_Chapter10.cpp)
add_executable(test02_Chapter10 test02_main_Chapter10.cpp test02_file_Chapter10.cpp)
add_executable(test03_Chapter10 test03_main_Chapter10.cpp test03_file_Chapter10.cpp)
add_executable(test04_Chapter10 test04_main_Chapter10.cpp test04_file_Chapter10.cpp)
add_executable(test05_Chapter10 test05_main_Chapter10.cpp test05_file_Chapter10.cpp)
add_executable(test06_Chapter10 test06_main_Chapter10.cpp test06_file_Chapter10.cpp)
add_executable(test07_Chapter10 test07_main_Chapter10.cpp test07_file_Chapter10.cpp)
add_executable(test08_Chapter10 test08_main_Chapter10.cpp test08_file_Chapter10.cpp)
