add_executable(01_Chapter11 01_main_Chapter11.cpp 01_file_Chapter11.cpp)
add_executable(demo_Chapter11 demo_Chapter11.cpp)
add_executable(demo_01_Chapter11 demo_01_Chapter11.cpp)
add_executable(demo_02_Chapter11 demo_02_Chapter11.cpp)
add_executable(02_Chapter11 02_main_Chapter11.cpp 02_file_Chapter11.cpp)
add_executable(04_Chapter11 04_main_Chapter11.cpp 04_file_Chapter11.cpp)
add_executable(05_Chapter11 05_main_Chapter11.cpp 05_file_Chapter11.cpp)
add_executable(06_Chapter11 06_main_Chapter11.cpp 06_file_Chapter11.cpp)
add_executable(07_Chapter11 07_main_Chapter11.cpp 07_file_Chapter11.cpp)
add_executable(review_Chapter11 review_Chapter11.cpp)
add_executable(text01_Chapter11 test01_main_Chapter11.cpp test01_file_Chapter11.cpp)
add_executable(text02_Chapter11 test02_main_Chapter11.cpp test02_file_Chapter11.cpp)
add_executable(text03_Chapter11 test03_main_Chapter11.cpp test03_file_Chapter11.cpp)
add_executable(text04_Chapter11 test04_main_Chapter11.cpp test04_file_Chapter11.cpp)
add_executable(text05_Chapter11 test05_main_Chapter11.cpp test05_file_Chapter11.cpp)
add_executable(text06_Chapter11 test06_main_Chapter11.cpp test06_file_Chapter11.cpp)
add_executable(text07_Chapter11 test07_main_Chapter11.cpp test07_file_Chapter11.cpp)
