add_executable(01_Chapter12 01_main_Chapter12.cpp 01_file_Chapter12.cpp)
add_executable(02_Chapter12 02_main_Chapter12.cpp 02_file_Chapter12.cpp)
add_executable(03_Chapter12 03_Chapter12.cpp)
add_executable(04_Chapter12 04_main_Chapter12.cpp 04_file_Chapter12.cpp)
add_executable(review review.cpp)
add_executable(test01_Chapter12 test01_main_Chapter12.cpp test01_file_Chapter12.cpp)
add_executable(test02_Chapter12 test02_main_Chapter12.cpp test02_file_Chapter12.cpp)
add_executable(test03_Chapter12 test03_main_Chapter12.cpp test03_file_Chapter12.cpp)
add_executable(test04_Chapter12 test04_main_Chapter12.cpp test04_file_Chapter12.cpp)
add_executable(test05_Chapter12 test05_main_Chapter12.cpp test05_file_Chapter12.cpp)
add_executable(test06_Chapter12 test06_main_Chapter12.cpp test06_file_Chapter12.cpp)
