add_executable(01_Chapter18 01_main_Chapter18.cpp)
add_executable(02_Chapter18 02_main_Chapter18.cpp)
add_executable(03_Chapter18 03_main_Chapter18.cpp)
add_executable(04_Chapter18 04_main_Chapter18.cpp)
add_executable(05_Chapter18 05_main_Chapter18.cpp)
add_executable(06_Chapter18 06_main_Chapter18.cpp)
add_executable(07_Chapter18 07_main_Chapter18.cpp)
add_executable(review_Chapter18 review_Chapter18.cpp)
add_executable(test01_Chapter18 test01_main_Chapter18.cpp)
add_executable(test02_Chapter18 test02_main_Chapter18.cpp)
add_executable(test03_Chapter18 test03_main_Chapter18.cpp)
add_executable(test04_Chapter18 test04_main_Chapter18.cpp)
